# BallBattle-c-game

./: .gitignore  CMakeLists.txt  Main.h  README.md  ballbattle design scheme(signal person version).txt  game architecture.txt  main.cpp
.qtcreator/: CMakeLists.txt.user.baa3ac8
Music/: MusicManager.cpp  MusicManager.h
collision/: CollisionManager.cpp  CollisionManager.h  SpatialGrid.h  spatialgrid.cpp
entity/: AIManager.cpp  AIManager.h  AIPlayer.cpp  AIPlayer.h  EjectedMass.cpp  EjectedMass.h  EjectedMassManager.h  EjectedMassManagerr.cpp  Food.cpp  Food.h  FoodManager.cpp  FoodManager.h  Virus.cpp  Virus.h  VirusManager.cpp  VirusManager.h
map/: Camera.cpp  Camera.h  CoordinateSystem.cpp  CoordinateSystem.h  GameMap.cpp  GameMap.h
operate/: IOperate.h
operate/EjectOperate/: EjectOperate.cpp  EjectOperate.h
operate/MergeOperate/: MergeOperate.cpp  MergeOperate.h
operate/OperateManager/: OperateManager.cpp  OperateManager.h
operate/SplitOperate/: SplitOperate.cpp  SplitOperate.h
player/: Ball.cpp  Ball.h  BasePlayer.cpp  BasePlayer.h  CharacterHandle.cpp  CharacterHandle.h  Player.cpp  Player.h
scene/: GameScene.cpp  GameScene.h
